--- a/Views/_Layout.cshtml
+++ b/Views/_Layout.cshtml
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"] - @siteName</title>
     <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="~/css/about.css">
 </head>
 <body>
     <!-- Top Bar -->
