--- a/Views/layout.cshtml
+++ b/Views/layout.cshtml
@@ -80,7 +80,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; @DateTime.Now.Year @siteName. All Rights Reserved. Credits to ThemeWrist</p>
+            <p>&copy; @DateTime.Now.Year @siteName. All Rights Reserved. Credits to <span class="footer-theme-text">ThemeWrist</span></p>
         </div>
     </footer>
 
